<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- The Choice texts -->
    <string name="app_name">The Choice</string>
    <string name="action_settings">Settings</string>

    <string name="text_random_choice_result">Random result</string>

    <string name="hint_press_choose_button">Please press \"%1$s\" button.</string>
    <string name="hint_shake_to_choose">Or shake!</string>
    <string name="choose_from_list">Choose from list </string>
    <string name="hint_list_name">List name</string>
    <string name="throw_coin">Throw coin</string>
    <string name="text_coin_heads">Heads</string>
    <string name="text_coin_tails">Tails</string>

    <string name="rule_dice">Rule dice</string>
    <string name="rule_custom_dice">Rule custom dice in range 1&#8230; </string>
    <string name="hint_custom_dice_range">e.g.: 10</string>

    <string name="button_choose">Choose</string>

    <string name="action_edit_items">Edit items</string>
    <string name="action_edit_itemlists">Edit item lists</string>


    <string name="text_please_add_items">Please first add items via the \"%1$s\" menu entry!</string>
    <string name="text_please_select_radio_button">Please first select radio button</string>

    <string name="action_exit">Exit</string>

    <!-- Shared texts -->
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>

    <!-- Items Database Editor texts -->
    <string name="app_db_editor_name">Item Database Editor</string>

    <string name="action_back_to_choose_item">Back</string>

    <string name="button_add_new_item">Add new</string>
    <string name="button_save_item">Save</string>
    <string name="button_cancel_edit_item">Cancel</string>
    <string name="hint_edit_or_delete_item">Click on an entry and hold.</string>


    <string name="button_delete_all_items">Delete all</string>
    <string name="button_add_default_items">Default entries</string>

    <string name="dialog_text_really_delete_all_items">Really delete all entries?</string>


    <string name="text_item_editor">Item editor</string>


    <string name="context_menu_edit_item">Edit</string>

    <string name="context_menu_delete_item">Delete item</string>
    <string name="dialog_text_really_delete_item">Really delete item?</string>

    <string name="text_edit_item">Edit item</string>

    <string name="hint_edit_item_name">Edit the item name</string>
    <string name="hint_edit_item_list_name">Edit the item list name</string>

    <string name="text_item_database_list">Entries</string>

</resources>
