<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <!-- START old design -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/group_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textEditItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_edit_item"
                android:textSize="20sp"
                android:textStyle="bold" >
            </TextView>

            <EditText
                android:id="@+id/hintTextItemName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint_edit_item_name" >
            </EditText>

            <EditText
                android:id="@+id/hintTextItemListName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint_edit_item_list_name" >
            </EditText>

            <LinearLayout
                android:id="@+id/group_add_and_save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/buttonAddItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onClick"
                    android:text="@string/button_add_new_item" />

                <Button
                    android:id="@+id/buttonSaveItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onClick"
                    android:text="@string/button_save_item" />

                <Button
                    android:id="@+id/buttonCancelEditItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onClick"
                    android:text="@string/button_cancel_edit_item" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/textItemsInDatabase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_item_database_list"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewEditOrDeleteItemHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_edit_or_delete_item" />

        <LinearLayout
            android:id="@+id/group_delete_and_addDefault_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/deleteAllItems"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/button_delete_all_items" />

            <Button
                android:id="@+id/buttonAddDefaultItems"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/button_add_default_items" />
        </LinearLayout>

        <ListView
            android:id="@android:id/list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_item_editor" />

    </LinearLayout>
    <!-- END old design -->

</LinearLayout>