<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="youareagit.thechoice.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <!-- START old design -->
        <item
            android:id="@+id/action_edit_items"
            android:orderInCategory="100"
            android:title="@string/action_edit_items"
            app:showAsAction="never"/>
         <item
            android:id="@+id/action_edit_itemlists"
            android:orderInCategory="100"
            android:title="@string/action_edit_itemlists"
            app:showAsAction="never"/>
        <item
            android:id="@+id/action_exit"
            android:orderInCategory="300"
            android:title="@string/action_exit"
            app:showAsAction="never"/>
    <!-- END old design -->

</menu>
