<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="youareagit.thechoice.ItemListDatabaseActivity"
    tools:showIn="@layout/activity_itemlists">

    <!-- START old design -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/group_edit_lists_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textEditItemList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_edit_item"
                android:textSize="20sp"
                android:textStyle="bold" >
            </TextView>

            <EditText
                android:id="@+id/hintTextItemListName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint= "@string/hint_edit_item_name" >
            </EditText>

            <LinearLayout
                android:id="@+id/group_add_and_save_listitem_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/buttonAddItemList"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onClick"
                    android:text="@string/button_add_new_item" />

                <Button
                    android:id="@+id/buttonSaveItemList"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onClick"
                    android:text="@string/button_save_item" />

                <Button
                    android:id="@+id/buttonCancelEditItemList"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onClick"
                    android:text="@string/button_cancel_edit_item" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/textItemListsInDatabase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_item_database_list"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewEditOrDeleteItemListHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_edit_or_delete_item" />

        <LinearLayout
            android:id="@+id/group_delete_and_addDefault_itemlist_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/deleteAllItemLists"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/button_delete_all_items" />

            <Button
                android:id="@+id/buttonAddDefaultItemLists"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/button_add_default_items" />
        </LinearLayout>

        <ListView
            android:id="@android:id/list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_item_editor" />

    </LinearLayout>
    <!-- END old design -->

</RelativeLayout>