<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="youareagit.thechoice.MainActivity"
    tools:showIn="@layout/activity_main">

    <!-- START old design -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/group_choose_from_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <RadioButton android:id="@+id/radio_choose_from_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_from_list"
                android:onClick="onRadioButtonClicked"/>
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinner_itemlist_name"
                android:layout_weight="1" />
            <!--TODO: Auskommentierten Teil unten entfernen, wenn Listbox oben funktioniert.-->
            <!--
            <TextView
                android:id="@+id/list_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint_list_name" />
                -->
        </LinearLayout>


        <RadioButton android:id="@+id/radio_throw_coin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/throw_coin"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radio_rule_dice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rule_dice"
            android:onClick="onRadioButtonClicked"/>
        <LinearLayout
            android:id="@+id/group_rule_custom_dice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <RadioButton android:id="@+id/radio_rule_custom_dice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rule_custom_dice"
                android:onClick="onRadioButtonClicked"/>
            <EditText
                android:id="@+id/edit_custom_dice_range"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:digits="0123456789"
                android:inputType="number"
                android:hint="@string/hint_custom_dice_range" >
            </EditText>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/group_chose_button_and_instruction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <Button
                android:id="@+id/buttonChoose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/button_choose"
                android:textSize="32sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/textViewShakeToChoose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint_shake_to_choose"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/group_random_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center">
            <TextView
                android:id="@+id/textViewRandomResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_random_choice_result"
                android:textSize="32sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                />

            <TextView
                android:id="@+id/textViewChoiceResultText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint_press_choose_button"
                android:textSize="32sp"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
            />

            <TextView
                android:id="@+id/textViewChoiceResut2Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint_shake_to_choose"
                android:textSize="32sp"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                />
        </LinearLayout>

    </LinearLayout>
    <!-- END old design -->
</RelativeLayout>
